# Python-homework-11

./: .env  README.md  docker-compose.yml  docker_python  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: a386b28a57fb_auto.py
scripts/: alembic_rev_gen_and_up.cmd  docker.cmd  generate_data.cmd  run_main.cmd
src/: main.py  run.py
src/app/: auth.py  cache.py  config.py  database.py  exceptions.py  main.py
src/app/client/: client.py
src/app/dependencies/: __init__.py  auth.py  db.py  services.py
src/app/entities/: __init__.py  sairport.py  sbook.py  scarr.py  scustom.py  sflight.py  spfli.py
src/app/generators/: __init__.py  generate_data.py  sairport.py  sbook.py  scarr.py  scustom.py  sflight.py  spfli.py
src/app/models/: __init__.py  sairport.py  sbook.py  scarr.py  scustom.py  sflight.py  spfli.py
src/app/repositories/: __init__.py  base.py  sairport.py  sbook.py  scarr.py  scustom.py  sflight.py  spfli.py
src/app/routers/: __init__.py  auth.py  booking.py
src/app/schemas/: __init__.py  sairport.py  sbook.py  scarr.py  scustom.py  sflight.py  spfli.py
src/app/services/: __init__.py  sairport.py  sbook.py  scustom.py  sflight.py
tests/: conftest.py
tests/factories/: __init__.py  sairport.py  sbook.py  scarr.py  scustom.py  sflight.py  spfli.py
tests/mocks/: __init__.py  mock_scustom_repo.py
tests/repositories/: conftest.py  test_repo_sairport.py  test_repo_sbook.py  test_repo_scarr.py  test_repo_scustom.py  test_repo_sflight.py  test_repo_spfli.py
tests/services/: conftest.py  test_service_scustom.py
(+2 files in other folders)
